Atrosha/proxy/build_error.txt
   Compiling atrosha-proxy v0.2.0 (C:\Python\Project Atrosha\Atrosha\proxy)
warning: unused import: `crate::AppState`
 --> src\json_policy.rs:2:5
  |
2 | use crate::AppState;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> src\main.rs:362:9
    |
357 |     if let Err(policy_err) = json_policy::evaluate_json_policies(
    |                              ----------------------------------- arguments to this function are incorrect
...
362 |         current_confidence,
    |         ^^^^^^^^^^^^^^^^^^ expected `f32`, found `f64`
    |
note: function defined here
   --> src\json_policy.rs:16:8
    |
 16 | pub fn evaluate_json_policies(
    |        ^^^^^^^^^^^^^^^^^^^^^^
...
 21 |     ml_confidence: f32,
    |     ------------------

For more information about this error, try `rustc --explain E0308`.
warning: `atrosha-proxy` (bin "atrosha-proxy") generated 1 warning
error: could not compile `atrosha-proxy` (bin "atrosha-proxy") due to 1 previous error; 1 warning emitted
